--- a/image-wlpcfg/pom.xml
+++ b/image-wlpcfg/pom.xml
@@ -13,21 +13,6 @@
       <wlpServerDir>${wlpUserDir}/servers/${wlpServerName}</wlpServerDir>
   </properties>
 
-    <pluginRepositories>
-        <!-- Configure Sonatype OSS Maven snapshots repository -->
-        <pluginRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus Snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </pluginRepository>
-    </pluginRepositories>
-
     <dependencies>
         <dependency>
             <groupId>pbw</groupId>
@@ -94,7 +79,7 @@
             <plugin>
                 <groupId>net.wasdev.wlp.maven.plugins</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
-                <version>1.1-SNAPSHOT</version>
+                <version>1.1</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverName>${wlpServerName}</serverName>
